...

class CharacterDetailScreenController: UIViewController {

    //MARK:- IBOutlets
    @IBOutlet weak var characterDetailsTableView: UITableView! {
        didSet {
            characterDetailsTableView.accessibilityIdentifier = "tableview--characterDetailsTableView"
            characterDetailsTableView.registerNib(type: BasicDetailsTableCell.self)
            characterDetailsTableView.registerNib(type: DualLabelTableCell.self)
            characterDetailsTableView.registerNib(type: PowerStatsTableCell.self)
        }
    }
    
...
    
    //MARK:- Lifecycle methods
    override func viewDidLoad() {
        super.viewDidLoad()
        title                        = character?.name
        view.backgroundColor         = .black
        view.accessibilityIdentifier = "controller--CharacterDetailScreenController"
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        navigationController?.navigationBar.titleTextAttributes = [NSAttributedString.Key.font: Font(.installed(.PoppinsMedium), size: .custom(21.0)).instance, NSAttributedString.Key.foregroundColor: UIColor.warmPink]
    }
...
